[package]
name = "kond-api"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
nanoid = "0.4.0"
rusqlite = { version = "0.33.0", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.26.0"
actix-cors = "0.7.0"
chrono = "0.4.39"
log = "0.4.26"
